fixed aligning bug

--- a/sass/_features.scss
+++ b/sass/_features.scss
@@ -6,6 +6,7 @@
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
     gap: 6rem;
+    align-items: start;
 }
 
 .feature {
@@ -13,7 +14,7 @@
     display: grid;
     grid-template-columns: min-content 1fr;
     row-gap: 1.5rem;
-    column-gap: 2rem;
+    column-gap: 2.5rem;
     align-items: flex-start;
     
     &__icon {
